<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/orange14"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange12"
        android:orientation="horizontal"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp">

        <ImageView
            android:id="@+id/widget_imageview"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/widget_imageview_desc"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/widget_title_desc"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/orange01"
            android:textStyle="bold"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/widget_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/widget_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/no_scores_available"
            android:textAppearance="?android:textAppearanceLarge"/>

    </FrameLayout>


</LinearLayout>